# GLlab

./: CMakeLists.txt  README.md
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/imgui/: CMakeLists.txt
ext/stb/: CMakeLists.txt
shader/: default_frag.glsl  phong.frag  texture.frag
src/: common.cpp  common.h  loadShader.cpp  loadShader.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  pipeline.cpp  pipeline.h  texture.cpp  texture.h  widget.cpp  widget.h
src/app/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h  resourceManager.cpp  resourceManager.h  widget.cpp  widget.h
src/core/: CMakeLists.txt  camera.hpp  common.h  exception.h  material.cpp  material.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h
src/gui/: widget.cpp  widget.h
